...
                                .padding()
                        }
                        
                        VStack{
                            Spacer()
                            DatePicker("Date", selection: $date,displayedComponents: [.date])
                                .accessibilityIdentifier("DateDatePicker") // Added accessibility identifier
                                .font(.custom("Poppins-Regular", size: 15))
                                .foregroundColor(textColor)
                                .textFieldStyle(.plain)
                                .padding()
                                .background(textboxColor)
                                .cornerRadius(20.0)
                                
                                                
                            
                            TextField("Weight",text:$weight).font(.custom("Poppins-SemiBold", size: 15))
                                .accessibilityIdentifier("WeightTextField") // Added accessibility identifier
                                                
                                .textFieldStyle(.plain)
                                .padding()
                                .background(textboxColor)
                                .cornerRadius(20.0)
                                .keyboardType(.decimalPad)
...
                                        .padding()
                                        .background(textboxColor)
                                        .cornerRadius(20.0)
//                                        .onChange(of: mealValue){ mealValue in
//                                            recordMeal = mealValue
//                                        }
                                    }.accessibilityIdentifier("MealMenu") // Added accessibility identifier

                                }
                                
                                TextField("Quantity",text:$quantity).font(.custom("Poppins-SemiBold", size: 15))
                                    .textFieldStyle(.plain)
                                    .padding()
                                    .background(textboxColor)
                                    .cornerRadius(20.0)
                                    .keyboardType(.decimalPad)
                                    .frame(width: 100)
                                    .accessibilityIdentifier("Quantity") // Added accessibility identifier

                                Image("add")
                                    .onTapGesture {
                                        print("add meal")
                                        selectedMeals.append("\(quantity)" + " " + "\(mealValue)")
                                        var mealId = 0
                                        meals.forEach{ meal in
                                            if(meal.name == mealValue){
...
                                        .padding()
                                        .background(textboxColor)
                                        .cornerRadius(20.0)
                                    }
                                }
                                
                                TextField("Reps",text:$reps).font(.custom("Poppins-SemiBold", size: 15))
                                    .textFieldStyle(.plain)
                                    .padding()
                                    .background(textboxColor)
                                    .cornerRadius(20.0)
                                    .keyboardType(.decimalPad)
                                    .frame(width: 100)
...
                                    DispatchQueue.main.asyncAfter(deadline: .now() + 2) {
                                        showText = false
                                    }
                            })
                            {
                                Text("Submit")
                                    .accessibilityIdentifier("SubmitButton") // Added accessibility identifier
                                                        
                                    .font(.custom("Poppins-SemiBold", size: 15)).padding(.horizontal,70)
                            }
                            .padding()
                            .foregroundColor(.white)
                            .background(Color.black)
                            .cornerRadius(57)
                            .offset(y:15)
                            

                            if(result == "failed"){
                                Text("Failed to add record")
                                    .accessibilityIdentifier("ResultText") // Added accessibility identifier
                                                        
                                    .font(.custom("Poppins-SemiBold", size: 15))
                                    .padding()
                                    .foregroundColor(.red)
                                    .opacity(showText ? 1 : 0)
                            }else if(result == "success"){
...
